win10 data collection mode

--- a/mini_project/Tool/tool_notebook.ipynb
+++ b/mini_project/Tool/tool_notebook.ipynb
@@ -57,28 +57,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting scapy\n",
-      "  Downloading scapy-2.5.0.tar.gz (1.3 MB)\n",
-      "Building wheels for collected packages: scapy\n",
-      "  Building wheel for scapy (setup.py): started\n",
-      "  Building wheel for scapy (setup.py): finished with status 'done'\n",
-      "  Created wheel for scapy: filename=scapy-2.5.0-py2.py3-none-any.whl size=1444346 sha256=f664fc4dd53c3955626afa934ece86a34cf4c1fbf4a4273cdfe0964b1fe561e5\n",
-      "  Stored in directory: c:\\users\\dell\\appdata\\local\\pip\\cache\\wheels\\dd\\1b\\47\\d46b1a87e339be501612cf4cd1bf57742e534f9c9aac7b00d6\n",
-      "Successfully built scapy\n",
-      "Installing collected packages: scapy\n",
-      "Successfully installed scapy-2.5.0\n"
+      "Collecting pywifi\n",
+      "  Downloading pywifi-1.1.12-py3-none-any.whl (15 kB)\n",
+      "Installing collected packages: pywifi\n",
+      "Successfully installed pywifi-1.1.12\n"
      ]
     }
    ],
    "source": [
-    "!python -m pip install scapy\n"
+    "!python -m pip install pywifi\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^C\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python data_collection.py"
    ]
   },
   {
@@ -99,11 +110,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Unfortunately, Scapy does not provide an easy way to capture wireless packets on Windows. The main reason is that Windows does not provide native support for monitor mode, which is necessary to capture Wi-Fi packets using Scapy. However, you can use an alternative Python library called 'pywifi' to scan nearby Wi-Fi networks and get the signal strength. Note that 'pywifi' does not provide as much detailed information as Scapy, and the signal strength value may not be as accurate.\n",
+    "\n",
+    "First, install 'pywifi' library:\n",
+    "\n",
+    "This script will display the SSID, BSSID, and signal strength of nearby Wi-Fi networks in real-time. You can modify the script to record the (x, y) coordinates and timestamp of the location where the data is collected and save the data in a structured format (e.g., CSV file).\n",
+    "\n",
+    "You can run the script as a regular user without administrator privileges. However, you may need to enable Wi-Fi scanning in the Wi-Fi settings of your Windows machine for the script to work correctly. Additionally, you need to replace the interface_name variable with your Wi-Fi interface name (e.g., \"Wi-Fi\" or \"Wireless Network Connection\")."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Data Preprocessing\n",
     "This script reads the collected data from a CSV file, removes duplicate rows and rows with missing values, filters out outliers in the 'signal_strength' column, normalizes the 'signal_strength' values to a range of [0, 1], and saves the preprocessed data to a new CSV file.\n",
     "\n",
     "You can modify the script based on your specific data format and preprocessing requirements."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "attachments": {},
