add file output functionality

--- a/mini_project/Tool/tool_notebook.ipynb
+++ b/mini_project/Tool/tool_notebook.ipynb
@@ -77,19 +77,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "^C\n"
+      "start finding wifi connection\n",
+      "[<pywifi.iface.Interface object at 0x0000025026378760>]\n",
+      "No Wi-Fi interface with name 'eduroam' found.\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 1\n"
      ]
     }
    ],
    "source": [
-    "!python data_collection.py"
+    "\n",
+    "import data_collection, importlib\n",
+    "importlib.reload(data_collection)\n",
+    "\n",
+    "data_collection.data_collection_main('eduroam')"
    ]
   },
   {
