--- a/mini_project/Tool/tool_notebook.ipynb
+++ b/mini_project/Tool/tool_notebook.ipynb
@@ -174,6 +174,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "To differentiate between different Access Points (APs) in your heatmap and estimate their locations using multiple measurements, you can follow these high-level steps:\n",
+    "\n",
+    "1. Collect Wi-Fi data: Gather data from different locations within the area of interest, including SSID, BSSID, signal strength, and device location (latitude and longitude). Make sure you have multiple measurements for each AP.\n",
+    "\n",
+    "2. Preprocess data: Filter and clean the data. Group the data by BSSID, as each BSSID represents a unique AP.\n",
+    "\n",
+    "3. Estimate AP locations: For each BSSID, analyze the data to estimate the most probable location of the corresponding AP. You can use a method like trilateration or weighted centroid localization based on the signal strength and device location. The estimation method should consider factors such as signal attenuation due to distance and obstacles.\n",
+    "\n",
+    "4. Prepare heatmap data: Once you have estimated the locations of the APs, create separate heatmap datasets for each AP. These datasets should contain the signal strength measurements for the respective APs at different device locations.\n",
+    "\n",
+    "5. Generate heatmaps: Using a visualization library like `matplotlib` and `seaborn`, create individual heatmaps for each AP, overlaying them on the floor plan image. To visually differentiate between APs, you can use different color maps or transparency levels.\n",
+    "\n",
+    "6. Plot AP locations: Mark the estimated AP locations on the floor plan using suitable markers or symbols. This will help visualize the relative positions of the APs and their signal strength distribution.\n",
+    "\n",
+    "By following these steps, you can create a heatmap that differentiates between different APs and visualize their signal strength distribution on a floor plan."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Visualization\n",
     "This script loads the heatmap numpy array and the CS_Building floor plan image, overlays the heatmap on the floor plan using an RGBA colormap with an alpha channel for transparency, adds a colorbar and labels, saves the visualization as an image file, and shows the visualization using matplotlib.\n",
     "\n",
