add main notebook

--- a/mini_project/Tool/tool_notebook.ipynb
+++ b/mini_project/Tool/tool_notebook.ipynb
@@ -5,11 +5,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# CS438 Mini-project\n",
     "# Tool Construction Notebook\n",
     "\n",
-    "Jie Wang, Coworked with GPT-4\n",
+    "- Jie Wang,\n",
+    "- Jiaxin Wu,\n",
+    "- Coworked with GPT-4\n",
     "\n",
     "04/18/2023\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is a python-based wifi anaylzer tool our group create for research. \n",
+    "\n",
+    "We compared many different Wi-Fi analyzer App like Netspot and Wifiman, but none of them provide implicit data for further analysis. Meanwhile, the scope and performance of these tools can't come up with our need. \n",
+    "\n",
+    "Therefore, we set up a series of python program to do datacollection, preprocessing, and heatmap generation.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`miniproject.zip` has the following content:\n",
+    "\n",
+    "* `tool_notebook.ipynb`: This is a <a href=\"https://anaconda.org/anaconda/jupyter\">Jupyter</a> notebook to demo the whole working procedure of our tool. \n",
+    "\n",
+    "* `coordinate_generation.py`: This is the program that load AP_info, generating the necessary coordinate map according to the floor plan of Sibel Center. \n",
+    "\n",
+    "* `data_collection.py`: This is a program that collect data for 3 times at one test point. \n",
+    "\n",
+    "* `data_preprocessing.py`: This is a program that preprocesses the raw data \n",
+    "\n",
+    "* `data_collection.py`: This is a program that collect data for 3 times at one test point. \n",
+    "\n",
+    "\n",
+    "* `requirements.txt`: This tells you which python packages you need to have installed, in order to run `our tool`.  You can install all of those packages by typing `pip install -r requirements.txt` or `pip3 install -r requirements.txt`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The "
    ]
   },
   {
@@ -53,58 +102,6 @@
     "You can find examples and tutorials on GitHub, Stack Overflow, or other online resources.\n",
     "Make sure to adapt the code to suit your specific data format and requirements.\n",
     "Once you have set up the project architecture, you can start implementing the individual components and fine-tune them based on your collected data and desired heatmap output."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting pywifi\n",
-      "  Downloading pywifi-1.1.12-py3-none-any.whl (15 kB)\n",
-      "Installing collected packages: pywifi\n",
-      "Successfully installed pywifi-1.1.12\n"
-     ]
-    }
-   ],
-   "source": [
-    "!python -m pip install pywifi\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start finding wifi connection\n",
-      "[<pywifi.iface.Interface object at 0x0000025026378760>]\n",
-      "No Wi-Fi interface with name 'eduroam' found.\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "1",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 1\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "import data_collection, importlib\n",
-    "importlib.reload(data_collection)\n",
-    "\n",
-    "data_collection.data_collection_main('eduroam')"
    ]
   },
   {
