--- a/mini_project/Tool/tool_notebook.ipynb
+++ b/mini_project/Tool/tool_notebook.ipynb
@@ -42,7 +42,9 @@
     "\n",
     "* `data_preprocessing.py`: This is a program that preprocesses the raw data \n",
     "\n",
-    "* `data_collection.py`: This is a program that collect data for 3 times at one test point. \n",
+    "* `heatmap.py`: This is a program that visualize the heatmap info\n",
+    "\n",
+    "* `visualization.py`: This is a program that visualize the heatmap info\n",
     "\n",
     "\n",
     "* `requirements.txt`: This tells you which python packages you need to have installed, in order to run `our tool`.  You can install all of those packages by typing `pip install -r requirements.txt` or `pip3 install -r requirements.txt`."
