complete all the assignment

--- a/Assignment/Assignment_3/cs438_hw3.md
+++ b/Assignment/Assignment_3/cs438_hw3.md
@@ -248,7 +248,7 @@ This would simplify end-to-end communication and potentially improve the perform
 | ---- | ------------ | ------- | ------- | ------- | --------- | -------- | -------- |
 | 0    | E            | 6,E     | 4,E     | **3,E** | $\infin$  | $\infin$ | $\infin$ |
 | 1    | EF           | 6,E     | **4,E** |         | $\infin$  | $\infin$ | 5,F      |
-| 2    | EFDG         | 6,E     |         |         | $\infin$  | 5, D     | **5,F**  |
+| 2    | EFD          | 6,E     |         |         | $\infin$  | 5, D     | **5,F**  |
 | 3    | EFDG         | 6,E     |         |         | $\infin$  | **5,D**  |          |
 | 4    | EFDGB        | **6,E** |         |         | 17, B     |          |          |
 | 5    | EFDGBC       |         |         |         | **14, C** |          |          |
