--- a/mini_project/Tool/tool_notebook.ipynb
+++ b/mini_project/Tool/tool_notebook.ipynb
@@ -16,6 +16,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -117,6 +124,28 @@
     "Note: This script requires root privileges to run, and you need to replace the interface variable with your Wi-Fi interface name (e.g., \"wlan0\" or \"en0\"). To find the correct interface name, you can run the iwconfig command on Linux or ifconfig command on macOS.\n",
     "\n",
     "Please keep in mind that this script is for educational purposes only. Make sure you have the necessary permissions to collect Wi-Fi data in your environment."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To collect sufficient data for drawing a heatmap, you should follow these guidelines:\n",
+    "\n",
+    "1. **Sampling density**: Take multiple samples at various locations to ensure a representative coverage of the area. The more samples you collect, the more accurate your heatmap will be. Ideally, you should collect data at regular intervals, such as every meter or half a meter, depending on the size of the area and the desired resolution of the heatmap.\n",
+    "\n",
+    "2. **Sampling duration**: To account for fluctuations in signal strength, consider taking multiple measurements at each location over a short period, e.g., 5-10 seconds. Then, calculate the average signal strength for each location to reduce the impact of temporary fluctuations on the heatmap.\n",
+    "\n",
+    "3. **Sampling strategy**: Choose a systematic sampling strategy to cover the area, such as grid-based sampling or random sampling. For grid-based sampling, collect data points in a grid pattern across the area. For random sampling, collect data points randomly across the area. Either way, ensure that the samples are uniformly distributed to provide a comprehensive view of the Wi-Fi signal strength.\n",
+    "\n",
+    "4. **Obstacles and environment**: Be aware of obstacles and environmental factors that could impact the Wi-Fi signal strength, such as walls, furniture, and electronic devices. These factors should be considered when collecting data and interpreting the resulting heatmap.\n",
+    "\n",
+    "5. **Data collection tool**: Ensure that your data collection tool is working correctly, and your device (e.g., laptop, smartphone) is capable of accurately measuring Wi-Fi signal strength. Calibrate your device if necessary.\n",
+    "\n",
+    "6. **Document your data**: Keep detailed notes on the locations where you collect data, including coordinates (x, y) and any relevant context, such as obstacles, access points, or other environmental factors. This information can be helpful when analyzing the heatmap and identifying areas for improvement.\n",
+    "\n",
+    "By following these guidelines, you can collect enough data to generate an accurate heatmap of Wi-Fi signal strength in the area."
    ]
   },
   {
