--- a/mini_project/Tool/tool_notebook.ipynb
+++ b/mini_project/Tool/tool_notebook.ipynb
@@ -6,13 +6,14 @@
    "metadata": {},
    "source": [
     "# CS438 Mini-project\n",
-    "# Tool Construction Notebook\n",
+    "# Heatmap Geneartion Tool Notebook\n",
     "\n",
     "- Jie Wang,\n",
     "- Jiaxin Wu,\n",
+    "- Luting Lei,\n",
     "- Coworked with GPT-4\n",
     "\n",
-    "04/18/2023\n"
+    "04/18/2023 - 05/12/2023\n"
    ]
   },
   {
@@ -60,7 +61,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The "
+    "To create a Wi-Fi network heatmap of the CS_Building, the following is our data-pipeline. \n",
+    "We take Procedural programming method, store the data in different csv file to realize a comforable analysis task.\n",
+    "1. Coordinate Generation\n",
+    "\n",
+    "2. Data Collection\n",
+    "Use a Wi-Fi and LTE Analyzer App like Wi-Fi Analyzer (Android) or Airport Utility (iOS) to gather signal strength, network performance, and other relevant parameters.\n",
+    "While collecting data, ensure that you note down the (x, y) coordinates of the locations within the CS_Building floor plan.\n",
+    "3. Data Preprocessing\n",
+    "Libraries: pandas, numpy\n",
+    "Process the collected data and convert it into a structured format (e.g., CSV file).\n",
+    "Read the CSV file using pandas and preprocess the data. Remove any outliers, fill missing values, and normalize the signal strength values if necessary.\n",
+    "4. Heatmap Generation\n",
+    "Libraries: scipy, numpy, matplotlib\n",
+    "Use the spatial data (coordinates) and signal strength data to interpolate the Wi-Fi signal strength across the entire floor plan.\n",
+    "You can use interpolation methods such as Inverse Distance Weighting (IDW) or Radial Basis Function (RBF) available in the scipy library.\n",
+    "The interpolated data will then be used to generate a heatmap.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Coordinate Generation\n",
+    "In order to do precise and reliable measurement on the Siebel Center, we need a high-resolution floor plan for it. We downloaded a floor plan from open-source and used \"matplotlib.ticker\" library to get the accurate x-y coordinate on the map for our test locations. Detailed implementation of this function can be found in \"Tools/coordinate\\_generation.py\". The following is an screenshot of the coordinate, by moving mouse on it, we can read the (x,y) location and manually input it to our data collection program. "
    ]
   },
   {
@@ -68,42 +93,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "To create a Wi-Fi network heatmap of the CS_Building, you can follow this high-level architecture:\n",
-    "\n",
-    "Data Collection\n",
-    "Data Preprocessing\n",
-    "Heatmap Generation\n",
-    "Visualization\n",
-    "1. Data Collection\n",
-    "Use a Wi-Fi and LTE Analyzer App like Wi-Fi Analyzer (Android) or Airport Utility (iOS) to gather signal strength, network performance, and other relevant parameters.\n",
-    "While collecting data, ensure that you note down the (x, y) coordinates of the locations within the CS_Building floor plan.\n",
-    "2. Data Preprocessing\n",
-    "Libraries: pandas, numpy\n",
-    "Process the collected data and convert it into a structured format (e.g., CSV file).\n",
-    "Read the CSV file using pandas and preprocess the data. Remove any outliers, fill missing values, and normalize the signal strength values if necessary.\n",
-    "3. Heatmap Generation\n",
-    "Libraries: scipy, numpy, matplotlib\n",
-    "Use the spatial data (coordinates) and signal strength data to interpolate the Wi-Fi signal strength across the entire floor plan.\n",
-    "You can use interpolation methods such as Inverse Distance Weighting (IDW) or Radial Basis Function (RBF) available in the scipy library.\n",
-    "The interpolated data will then be used to generate a heatmap.\n",
-    "4. Visualization\n",
-    "Libraries: matplotlib, seaborn\n",
-    "Overlay the heatmap on the CS_Building floor plan using matplotlib and seaborn.\n",
-    "Use a color scale to indicate signal strength (e.g., green for strong, yellow for moderate, and red for weak).\n",
-    "Highlight any dead zones or areas with high network interference.\n",
-    "Save the generated heatmap as an image file (e.g., PNG, JPEG).\n",
-    "Open-source Code\n",
-    "Use the existing open-source code for heatmap generation and visualization as a starting point.\n",
-    "You can find examples and tutorials on GitHub, Stack Overflow, or other online resources.\n",
-    "Make sure to adapt the code to suit your specific data format and requirements.\n",
-    "Once you have set up the project architecture, you can start implementing the individual components and fine-tune them based on your collected data and desired heatmap output."
+    "!python coordinate_generation.py\n",
+    "# please input the floor you are testing"
    ]
   },
   {
@@ -160,7 +152,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!python data_collection.py"
+   ]
   },
   {
    "attachments": {},
@@ -174,9 +168,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "!python data_preprocessing.py"
+   ]
   },
   {
    "attachments": {},
@@ -213,14 +211,12 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Visualization\n",
-    "This script loads the heatmap numpy array and the CS_Building floor plan image, overlays the heatmap on the floor plan using an RGBA colormap with an alpha channel for transparency, adds a colorbar and labels, saves the visualization as an image file, and shows the visualization using matplotlib.\n",
-    "\n",
-    "You need to replace the floorplan_image variable with the path to your CS_Building floor plan image file (e.g., \"floorplan.png\"). Make sure the dimensions of the floor plan image match the dimensions of the heatmap. If necessary, you can adjust the colormap, transparency, and other visualization parameters to suit your requirements."
+    "!python heatmap_generation.py"
    ]
   }
  ],
