almost finished paper

--- a/mini_project/Tool/tool_notebook.ipynb
+++ b/mini_project/Tool/tool_notebook.ipynb
@@ -52,6 +52,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -217,6 +218,24 @@
    "outputs": [],
    "source": [
     "!python heatmap_generation.py"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Single AP analysis\n",
+    "based on data collected, we can pick up the measuered part of each AP, checking if they are connected or not\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python single_AP_analysis.py"
    ]
   }
  ],
